# GyneSoft

./: README.md  package-lock.json  package.json
scripts/: desktop.mjs
src/: App.css  App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: legacy.rs  mod.rs  patients.rs  video.rs
src-tauri/src/db/: mod.rs
src/components/: ClinicalHistoryPDF.tsx  ColposcopyPDF.tsx  MedicalNotePDF.tsx
src/pdf/: pdfLib.ts
src/views/: ClinicalHistoryForm.tsx  Colposcopy.tsx  Configuration.tsx  Home.tsx  MedicalNoteForm.tsx  NoteEditor.tsx  NotesList.tsx  PatientDashboard.tsx  PatientsList.tsx  PedalDiagnostic.tsx
